src/test/deca/context/valid/test_class/unit_instanceof.deca
// Description:
//    Unit Test Instanceof
// Results:
//    true
//
// History:
//    Created on 16/01/2025


class A { }
class B extends A { }

{
    A a = new B();
    if (a instanceof B){
	println(1);
    }
    else {
	println(0);	
    }
}
